--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "pm-public-website",
   "version": "1.0.0",
-  "description": "",
+  "description": "Project MotiVATe CMS",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jkchuynh829/pm-public-website.git"
+  },
   "scripts": {
     "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development node dev-server.js",
@@ -25,7 +29,11 @@
     "mocha": "^3.2.0",
     "mocha-generators": "^2.0.0",
     "nightmare": "^2.10.0",
+    "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
+    "postcss-load-config": "^1.2.0",
+    "postcss-loader": "^1.3.3",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "superagent": "^3.5.2",
     "supertest": "^3.0.0",
